--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 
 *{
@@ -15,7 +16,7 @@ html {
 }
 
 :root {
-    --color-bg: #E5E5E5;
+    --color-bg: #140909;
     --background-btn: linear-gradient(157.81deg, #DEF9FA -43.27%, #BEF3F5 -21.24%, #9DEDF0 12.19%, #7DE7EB 29.82%, #5CE1E6 51.94%, #33BBCF 90.29%);
     --text-color : radial-gradient(64.18% 64.18% at 71.16% 35.69%, #DEF9FA 0.89%, #BEF3F5 17.23%, #9DEDF0 42.04%, #7DE7EB 55.12%, #5CE1E6 71.54%, #33BBCF 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
     --card-bg: linear-gradient(144.39deg, #FFFFFF -278.56%, #6D6D6D -78.47%, #11101D 91.61%);
@@ -23,6 +24,10 @@ html {
     --right-bg: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214D76 100%);
     --middle-left-bg: linear-gradient(90deg, #F4C4F3 0%, #FC67FA 100%);
     --bottom-right-bg: linear-gradient(90deg, #1A2980 0%, #26D0CE 100%);
+    --container-width-lg: 75%;
+    --container-width-md: 86%;
+    --container-width-sm: 90%;
+    --circle-gradient: linear-gradient(157.81deg, #DEF9FA -43.27%, #BEF3F5 -21.24%, #9DEDF0 12.19%, #7DE7EB 29.82%, #5CE1E6 51.94%, #33BBCF 90.29%)
 }
 
 ::-webkit-scrollbar {
@@ -33,21 +38,65 @@ body{
     font-family: "poppins" sans-serif;
     background: var(--color-bg);
     color: white;
+    font-family: 'Poppins';
+}
+
+.container {
+    width: var(--container-width-lg);
+    margin: 0 auto;
+}
+
+.section {
+    margin-top: 8rem;
 }
 
 
 h1{
     font-weight: 600;
-    font-size: 48px;
+    font-size: 72px;
     color: #FFFFFF;
-}
-
-h2{
-    font-weight: 400;
-    font-size: 18px;
 }
 
 h3{
     font-weight: 400;
+    font-size: 18px;
+    line-height: 170%;
+}
+
+h4{
+    font-weight: 400;
     font-size: 16px;
+}
+
+.text-color {
+    color: rgba(255, 255, 255, 0.7);
+}
+
+.icon-bg{
+    background: var(--icon-bg);
+}
+
+.special-text-color {
+    background: radial-gradient(64.18% 64.18% at 71.16% 35.69%, #DEF9FA 0.89%, #BEF3F5 17.23%, #9DEDF0 42.04%, #7DE7EB 55.12%, #5CE1E6 71.54%, #33BBCF 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
+
+/* ======================= MEDIA QUERIES (MEDIUM DEVICES) ===================== */
+@media screen and (max-width: 1024px) {
+    .container {
+        width: var(--container-width-md)
+    }
+
+    .section {
+        margin-top: 6rem;
+    }
+}
+
+/* ======================= MEDIA QUERIES (SMALL DEVICES) ===================== */
+@media screen and (max-width: 600px) {
+    .container{
+        width: var(--container-width-sm);
+    }
 }
