--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 .generation__header {
     display: flex;
-    padding: 4rem 2rem;
+    padding: 4rem 6rem;
 }
 
 .generation__header-content {
@@ -26,6 +26,7 @@
 
 .generation__header-content .generation__para {
     margin-top: 3rem;
+    max-width: 432px
 }
 
 .generation__header-image {
@@ -42,14 +43,26 @@
 
 
 
+@media screen and (max-width: 1280px) {
+    .generation__header-content h1 {
+        font-weight: 600;
+        font-size: 55px;
+        line-height: 140%;
+    }
+}
+
 @media screen and (max-width: 1024px) {
     .generation__header {
         flex-direction: column;
     }
 
     .generation__header-image {
-        margin-top: 2rem;
-       
+        margin-top: 2rem; 
+    }
+    .generation__header-content h1 {
+        font-weight: 600;
+        font-size: 72px;
+        line-height: 140%;
     }
 }
 
@@ -60,7 +73,19 @@
         line-height: 140%;
     }
     .generation__header-content .generation__para {
-        font-size: 10px;
+        font-size: px;
+        margin-top: 2rem;
+    }
+    .generation__header {
+        display: flex;
+        padding: 4rem 6rem;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .generation__header {
+        display: flex;
+        padding: 4rem 2rem;
     }
 }
 
