--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,8 @@ html {
     --container-width-lg: 75%;
     --container-width-md: 86%;
     --container-width-sm: 90%;
-    --circle-gradient: linear-gradient(157.81deg, #DEF9FA -43.27%, #BEF3F5 -21.24%, #9DEDF0 12.19%, #7DE7EB 29.82%, #5CE1E6 51.94%, #33BBCF 90.29%)
+    --circle-gradient: linear-gradient(157.81deg, #DEF9FA -43.27%, #BEF3F5 -21.24%, #9DEDF0 12.19%, #7DE7EB 29.82%, #5CE1E6 51.94%, #33BBCF 90.29%);
+    --percent-bg: linear-gradient(125.17deg, #272727 0%, #11101D 100%);;
 }
 
 ::-webkit-scrollbar {
