--- a/src/components/aboutus/aboutus.css
+++ b/src/components/aboutus/aboutus.css
@@ -35,7 +35,7 @@
     align-items: center;
     justify-content: space-around;
     gap: 1rem;
-    padding: 1rem 0;
+    padding: 0.7rem 0;
 }
 
 @media screen and (max-width:400px) {
@@ -45,6 +45,7 @@
 
     .numbers {
         width: 100%;
+        font-size:30px;
     }
 
     .aboutus__p {
