--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -19,6 +19,7 @@
     background: var(--percent-bg);
     border-radius: 10px;
     padding: 6px;
+    margin-bottom: 1rem;
 }
 
 .gradient__text p {
@@ -57,6 +58,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right:3rem;
 }
 
 .generation__header-image img {
@@ -117,7 +119,7 @@
 @media screen and (max-width: 650px) {
     .generation__header-content h1 {
         font-weight: 600;
-        font-size: 35px;
+        font-size: 33px;
         line-height: 140%;
     }
     .generation__header-content .generation__para {
@@ -138,6 +140,11 @@
     .generation__header {
         display: flex;
         padding: 4rem 2rem;
+    }
+
+    .generation__header-image {
+        display: none;
+        margin-right:3rem;
     }
 }
 
