--- a/src/components/aboutus/aboutus.css
+++ b/src/components/aboutus/aboutus.css
@@ -33,13 +33,13 @@
     display: flex;
     /* width: 100%; */
     align-items: center;
-    justify-content: space-around;
-    gap: 1rem;
+    /* justify-content: space-around; */
+    gap: 2rem;
     padding: 0.7rem 0;
     width:500px;
 }
 
-@media screen and (max-width:400px) {
+@media screen and (max-width:700px) {
     .aboutus {
         flex-direction: column;
     }
