--- a/src/oneliners/users/users.css
+++ b/src/oneliners/users/users.css
@@ -20,7 +20,7 @@
     /* justify-content: space-between; */
     align-items: center;
     gap: 2rem;
-    padding: 1.5rem;
+    padding: 1.5rem 0;
 }
 
 .icon__text div {
