--- a/src/components/features/features.css
+++ b/src/components/features/features.css
@@ -20,6 +20,14 @@
     height: 100%;
 }
 
+.features__brands {
+    margin-top: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 2rem;
+}
+
 @media screen and (max-width:1024px) {
     .features__container {
         flex-direction: column;
