--- a/src/oneliners/sponsors/sponsors.css
+++ b/src/oneliners/sponsors/sponsors.css
@@ -10,6 +10,7 @@
 .sponsors__icons {
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .sponsors__icons img {
@@ -19,4 +20,16 @@
 
 .sponsors__dropbox {
     gap: 1rem;
+}
+
+.sponsors__dropbox img {
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (max-width: 500px) {
+    .sponsors {
+        flex-direction: column;
+        gap: 2rem;
+    }
 }
