--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -41,5 +41,29 @@
     color: rgba(92, 225, 230, 1)
 }
 
+.footer__ending {
+    margin-top: 5rem;
+}
+
+.footer__line {
+    width: 100%;
+    height: 2px;
+    background: white;
+}
+
+.footer__copyright {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.footer__icons {
+    display: flex;
+    gap: 1rem;
+    font-size: 2rem;
+}
+
 
 
