--- a/src/components/aboutus/aboutus.css
+++ b/src/components/aboutus/aboutus.css
@@ -1,6 +1,6 @@
 .aboutus {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
@@ -34,21 +34,22 @@
     /* width: 100%; */
     align-items: center;
     /* justify-content: space-around; */
-    gap: 2rem;
+    gap: 1rem;
     padding: 0.7rem 0;
     width:500px;
 }
 
-@media screen and (max-width:700px) {
+@media screen and (max-width:1180px) {
     .aboutus {
         flex-direction: column;
     }
 
     .numbers {
         width: 100%;
-        font-size:30px;
+        /* font-size:30px; */
         flex-direction: column;
         padding: 1rem;
+        justify-content: center;
     }
 
     .aboutus__p {
