--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -62,7 +62,14 @@
 .footer__icons {
     display: flex;
     gap: 1rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
+}
+
+.react-icon {
+    font-size: 1.5rem;
+    color: purple;
+    position: absolute;
+    
 }
 
 
