--- a/src/components/service/service.css
+++ b/src/components/service/service.css
@@ -13,6 +13,6 @@
     .service .content__content {
         flex-direction: column;
         gap: 3rem;
-        padding: 1rem;
+        padding: 2rem 1rem;
     }
 }
