--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,10 @@ body{
     padding: 4rem 6rem;
 }
 
+.section__padding2 {
+    padding: 1rem 6rem;
+}
+
 /* .container {
     width: var(--container-width-lg);
     margin: 0 auto;
@@ -75,6 +79,10 @@ h4{
     .section__padding {
         /* display: flex; */
         padding: 4rem 2rem;
+    }
+
+    .section__padding2 {
+        padding: 1rem 2rem;
     }
 }
 
