--- a/src/oneliners/users/users.css
+++ b/src/oneliners/users/users.css
@@ -8,6 +8,10 @@
     flex: 0.5;
 }
 
+.content__users p{
+    margin-top: 2rem;
+}
+
 .users__card {
     flex: 0.5;
     display: flex;
@@ -20,7 +24,7 @@
     /* justify-content: space-between; */
     align-items: center;
     gap: 2rem;
-    padding: 1.5rem 0;
+    padding: 1rem;
 }
 
 .icon__text div {
@@ -61,7 +65,7 @@
     background: linear-gradient(153.47deg, rgba(255, 255, 255, 0) -341.94%, #14101D 95.11%);
     box-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
     border-radius: 20px;
-    
+    /* padding: 2rem; */
 }
 
 
