--- a/src/components/sayings/sayings.css
+++ b/src/components/sayings/sayings.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 3rem;
+    position: relative;
 }
 
 .sayings__testimonials {
@@ -20,6 +21,20 @@
 
 .trying {
     color: red;
+}
+
+.testimonials__bg {
+    position: absolute;
+    width: 200px;
+    height: 438px;
+    left: 60%;
+    top: 0px;
+    z-index: 0;
+    background: linear-gradient(90deg, #1A2980 0%, #26D0CE 100%);
+    background: #7aebfb;
+    filter: blur(180px);
+    /* border-radius: 200px; */
+    /* transform: rotate(47.46deg); */
 }
 
 @media screen and (max-width:1200px){
