--- a/src/components/features/features.css
+++ b/src/components/features/features.css
@@ -1,3 +1,19 @@
+.features {
+    position: relative;
+}
+
+.features__bg {
+    position: absolute;
+    width: 200px;
+    height: 471px;
+    left: 10%;
+    top: 0;
+    z-index: 0;
+    background: rgba(255, 255, 255, 0.6);
+    filter: blur(200px);
+    transform: rotate(176.62deg);
+}
+
 .transaction__text button {
     display: none;
 }
