--- a/src/components/features/features.css
+++ b/src/components/features/features.css
@@ -4,13 +4,13 @@
 
 .features__bg {
     position: absolute;
-    width: 200px;
+    width: 130px;
     height: 471px;
-    left: 10%;
-    top: 0;
+    left: 1%;
+    top: 7rem;
     z-index: 0;
     background: rgba(255, 255, 255, 0.6);
-    filter: blur(200px);
+    filter: blur(100px);
     transform: rotate(176.62deg);
 }
 
@@ -29,11 +29,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1;
 }
 
 .transaction__card img {
     width: 100%;
     height: 100%;
+}
+
+.content__content {
+    z-index: 1;
 }
 
 .features__brands {
