--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,12 @@ body{
     padding: 1rem 6rem;
 }
 
+.section__padding3 {
+    padding-left: 6rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+}
+
 /* .container {
     width: var(--container-width-lg);
     margin: 0 auto;
@@ -83,6 +89,15 @@ h4{
 
     .section__padding2 {
         padding: 1rem 2rem;
+    }
+
+    
+}
+
+@media screen and (max-width: 1280px) {
+    .section__padding3 {
+        padding: 1rem 2rem;
+
     }
 }
 
